cmss/main/default/objects/Case/fields/AccountComplainerNameEquals__c.field-meta.xml
<CustomField>
    <fullName>AccountComplainerNameEquals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account.FirstName + Account.LastName == ComplainerFirstName + ComplainerLastName</description>
    <label>Account Complainer Name Equals</label>
    <type>Checkbox</type>
</CustomField>