cmss/main/default/objects/Case/fields/AccountContractorNameEquals__c.field-meta.xml
<CustomField>
    <fullName>AccountContractorNameEquals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account.CombinedName__c == Contractor.CombinedName__c</description>
    <label>Account Contractor Name Equals</label>
    <type>Checkbox</type>
</CustomField>