cmss/main/default/objects/Case/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>