cmss/main/default/objects/Case/fields/AdditionalAddressLine__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAddressLine__c</fullName>
    <label>Additional Address Line</label>
    <length>250</length>
    <type>Text</type>
</CustomField>