cmss/main/default/objects/Case/fields/AnswerForm__c.field-meta.xml
<CustomField>
    <fullName>AnswerForm__c</fullName>
    <defaultValue>(&quot;3&quot;)</defaultValue>
    <label>Answer Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>