cmss/main/default/objects/Case/fields/ApplicantSameAsSubject__c.field-meta.xml
<CustomField>
    <fullName>ApplicantSameAsSubject__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Volba, zda je podávající shodný se subjektem údajů</description>
    <label>Applicant Same As Subject</label>
    <type>Checkbox</type>
</CustomField>