cmss/main/default/objects/Case/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Schvalovatel (skutečný, tj. kdo schválil)</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApproverCases</relationshipName>
    <type>Lookup</type>
</CustomField>