cmss/main/default/objects/Case/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Datum narození podávajícího</description>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>