cmss/main/default/objects/Case/fields/CaseID__c.field-meta.xml
<CustomField>
    <fullName>CaseID__c</fullName>
    <externalId>true</externalId>
    <label>Case ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>