cmss/main/default/objects/Case/fields/CaseSource__c.field-meta.xml
<CustomField>
    <fullName>CaseSource__c</fullName>
    <description>Zdroj případu</description>
    <label>Case Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>