cmss/main/default/objects/Case/fields/CaseTypeNotificationHelper__c.field-meta.xml
<CustomField>
    <fullName>CaseTypeNotificationHelper__c</fullName>
    <description>counts sum from field Case type helper and is used to determine if an Email alert should be sent</description>
    <label>Case Type Notification Helper</label>
    <summarizedField>CaseType__c.CaseTypeNotificationHelper__c</summarizedField>
    <summaryForeignKey>CaseType__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>