cmss/main/default/objects/Case/fields/CaseTypeSummary__c.field-meta.xml
<CustomField>
    <fullName>CaseTypeSummary__c</fullName>
    <description>Indicates how many Case Type records exist for a Case. Is used in Validations (CaseTypeMustExistResponseSentDate, CaseTypeMustExistStatus)</description>
    <label>Case Type Summary</label>
    <summaryForeignKey>CaseType__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>