cmss/main/default/objects/Case/fields/CauseLegitComplaint__c.field-meta.xml
<CustomField>
    <fullName>CauseLegitComplaint__c</fullName>
    <description>Detail pochybení při oprávněném podání</description>
    <label>Cause Legit Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>