cmss/main/default/objects/Case/fields/ChangeReason__c.field-meta.xml
<CustomField>
    <fullName>ChangeReason__c</fullName>
    <description>Důvod změny</description>
    <label>Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>110</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>133</fullName>
            </value>
            <value>
                <fullName>160</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>301</fullName>
            </value>
            <value>
                <fullName>302</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>401</fullName>
            </value>
            <value>
                <fullName>402</fullName>
            </value>
            <value>
                <fullName>403</fullName>
            </value>
            <value>
                <fullName>404</fullName>
            </value>
            <value>
                <fullName>405</fullName>
            </value>
            <value>
                <fullName>406</fullName>
            </value>
            <value>
                <fullName>407</fullName>
            </value>
            <value>
                <fullName>408</fullName>
            </value>
            <value>
                <fullName>409</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>