cmss/main/default/objects/Case/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Adresa podávajícího - město</description>
    <inlineHelpText>Pokud vyberete klienta, údaj se doplní automaticky po uložení GDPR podání.</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>