cmss/main/default/objects/Case/fields/CompensationAmount__c.field-meta.xml
<CustomField>
    <fullName>CompensationAmount__c</fullName>
    <description>Finanční kompenzace</description>
    <label>Compensation Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>