cmss/main/default/objects/Case/fields/ComplainerContractor__c.field-meta.xml
<CustomField>
    <fullName>ComplainerContractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Jméno podávajícího smluvního partnera</description>
    <label>Complainer Contractor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesUser</relationshipName>
    <type>Lookup</type>
</CustomField>