cmss/main/default/objects/Case/fields/ComplainerContractorCPU__c.field-meta.xml
<CustomField>
    <fullName>ComplainerContractorCPU__c</fullName>
    <label>Complainer Contractor CPU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>