cmss/main/default/objects/Case/fields/ComplainerFirstName__c.field-meta.xml
<CustomField>
    <fullName>ComplainerFirstName__c</fullName>
    <description>Křestní jméno podávajícího</description>
    <inlineHelpText>If account is selected, attribute is filled automatically after save</inlineHelpText>
    <label>Complainer First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>