cmss/main/default/objects/Case/fields/ComplainerLastName__c.field-meta.xml
<CustomField>
    <fullName>ComplainerLastName__c</fullName>
    <description>Příjmení podávajícího</description>
    <inlineHelpText>If account is selected, attribute is filled automatically after save</inlineHelpText>
    <label>Complainer Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>