cmss/main/default/objects/Case/fields/ComplaintAgainstFirstName__c.field-meta.xml
<CustomField>
    <fullName>ComplaintAgainstFirstName__c</fullName>
    <description>Křestní jméno osoby, proti které je podání směřováno</description>
    <label>Complaint Against First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>