cmss/main/default/objects/Case/fields/ComplaintAgainstLastName__c.field-meta.xml
<CustomField>
    <fullName>ComplaintAgainstLastName__c</fullName>
    <description>Příjmení osoby, proti které je podání směřováno</description>
    <label>Complaint Against Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>