cmss/main/default/objects/Case/fields/ComplaintClosingReason__c.field-meta.xml
<CustomField>
    <fullName>ComplaintClosingReason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Complaint Closing Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>