cmss/main/default/objects/Case/fields/ComplaintLegitimacy__c.field-meta.xml
<CustomField>
    <fullName>ComplaintLegitimacy__c</fullName>
    <description>Informace zda se jedná o oprávněné podání</description>
    <label>Complaint Legitimacy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>