cmss/main/default/objects/Case/fields/ComplaintReceivingConfirmation__c.field-meta.xml
<CustomField>
    <fullName>ComplaintReceivingConfirmation__c</fullName>
    <description>Pole obsahující informaci kdy došlo k odeslání potvrzení o přijetí podání podávájícímu</description>
    <label>Complaint Receiving Confirmation</label>
    <type>DateTime</type>
</CustomField>