cmss/main/default/objects/Case/fields/CompletedRequestsNumber__c.field-meta.xml
<CustomField>
    <fullName>CompletedRequestsNumber__c</fullName>
    <description>Počet dokončených requestů</description>
    <formula>SuccessRequestsNumber__c + FailedRequestsNumber__c</formula>
    <label>Completed Requests Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>