cmss/main/default/objects/Case/fields/ConsolidationResult__c.field-meta.xml
<CustomField>
    <fullName>ConsolidationResult__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidation Result</label>
    <referenceTo>ConsolidationResult__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>