cmss/main/default/objects/Case/fields/ContractorCommissionAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractorCommissionAccountNumber__c</fullName>
    <formula>Contractor__r.CommissionAccountNr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor Commission Account Number</label>
    <type>Text</type>
</CustomField>