cmss/main/default/objects/Case/fields/ContractorCPU__c.field-meta.xml
<CustomField>
    <fullName>ContractorCPU__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contractor CPU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>