cmss/main/default/objects/Case/fields/ContractorNameEquals__c.field-meta.xml
<CustomField>
    <fullName>ContractorNameEquals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updates in Case Trigger. 
If ComplainerContractor&apos;s Name is Equal to ComplainerFirstName + ComplainerLastName then true.</description>
    <label>Contractor Name Equals</label>
    <type>Checkbox</type>
</CustomField>