cmss/main/default/objects/Case/fields/ContractorSortingCode__c.field-meta.xml
<CustomField>
    <fullName>ContractorSortingCode__c</fullName>
    <formula>Contractor__r.SortingCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor Sorting Code</label>
    <type>Text</type>
</CustomField>