cmss/main/default/objects/Case/fields/CorrectionAccountingType__c.field-meta.xml
<CustomField>
    <fullName>CorrectionAccountingType__c</fullName>
    <description>Bližší specifikace typu nákladu</description>
    <label>Correction Accounting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>