cmss/main/default/objects/Case/fields/CPECallAttempts__c.field-meta.xml
<CustomField>
    <fullName>CPECallAttempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CPE Call Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>