cmss/main/default/objects/Case/fields/CreatedByCust__c.field-meta.xml
<CustomField>
    <fullName>CreatedByCust__c</fullName>
    <formula>HYPERLINK(
  &quot;/&quot; &amp; CreatedBy.Id,
  CreatedBy.FirstName  +&apos; &apos;+ CreatedBy.LastName,
  &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <type>Text</type>
</CustomField>