cmss/main/default/objects/Case/fields/CurrentState__c.field-meta.xml
<CustomField>
    <fullName>CurrentState__c</fullName>
    <label>Current State</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>