cmss/main/default/objects/Case/fields/Days10Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Days10Exceeded__c</fullName>
    <formula>ReceivedDate__c  &gt;= (TODAY() + 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10 Days Exceeded</label>
    <type>Checkbox</type>
</CustomField>