cmss/main/default/objects/Case/fields/DaysOfComplaintSolving__c.field-meta.xml
<CustomField>
    <fullName>DaysOfComplaintSolving__c</fullName>
    <formula>ResponseSentDate__c - ReceivedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Of Complaint Solving</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>