cmss/main/default/objects/Case/fields/DecisionDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionDate__c</fullName>
    <description>Datum schválení/zamítnutí</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>