cmss/main/default/objects/Case/fields/DetailComplaintPriority__c.field-meta.xml
<CustomField>
    <fullName>DetailComplaintPriority__c</fullName>
    <description>Upřesnění komu je klientské podání adresováno.</description>
    <label>Detail Complaint Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>