cmss/main/default/objects/Case/fields/DueDatetime__c.field-meta.xml
<CustomField>
    <fullName>DueDatetime__c</fullName>
    <description>Due date is calculated as Received Date + 30 days</description>
    <formula>IF(  AND( IsClientClaim__c , NOT( ISBLANK( ReceivedDate__c) ) ), ReceivedDate__c + 30, null)</formula>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>