cmss/main/default/objects/Case/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <description>Datum kdy dojde/došlo k expiraci</description>
    <formula>CreatedDate + 14</formula>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>