cmss/main/default/objects/Case/fields/ExtensionInfoSent__c.field-meta.xml
<CustomField>
    <fullName>ExtensionInfoSent__c</fullName>
    <description>The date of an information to the client with an appology that the claim will be resolved later than the official due date.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The sending date of the appology information to the client.</inlineHelpText>
    <label>Extension Info Sent</label>
    <type>Date</type>
</CustomField>