cmss/main/default/objects/Case/fields/FailedRequestsNumber__c.field-meta.xml
<CustomField>
    <fullName>FailedRequestsNumber__c</fullName>
    <description>Počet neúspěšně dokončených – Nápočet pomocí DLRS dle stavu requestů</description>
    <inlineHelpText>Platné k aktuálnímu okamžiku</inlineHelpText>
    <label>Failed Requests Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>