cmss/main/default/objects/Case/fields/ForwardedToCSOB__c.field-meta.xml
<CustomField>
    <fullName>ForwardedToCSOB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Příznak, zda bylo podání předáno do ČSOB</description>
    <label>Forwarded To CSOB</label>
    <type>Checkbox</type>
</CustomField>