cmss/main/default/objects/Case/fields/GDPRCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>GDPRCaseNumber__c</fullName>
    <displayFormat>{00000}{YYYY}</displayFormat>
    <label>GDPR Case Number</label>
    <type>AutoNumber</type>
</CustomField>