cmss/main/default/objects/Case/fields/HistoricCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>HistoricCaseNumber__c</fullName>
    <description>Holds Case Number for imported/migrated records. Expected format is YYYY00000</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Historic Case Number</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>