cmss/main/default/objects/Case/fields/HouseNumber__c.field-meta.xml
<CustomField>
    <fullName>HouseNumber__c</fullName>
    <description>Adresa podávajícího - č. domu</description>
    <label>House Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>