cmss/main/default/objects/Case/fields/InstitutionInformed__c.field-meta.xml
<CustomField>
    <fullName>InstitutionInformed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informace zda byl dopis dán na vědomí jedné z institucí</description>
    <label>Institution Informed</label>
    <type>Checkbox</type>
</CustomField>