cmss/main/default/objects/Case/fields/InstitutionInformedDetail__c.field-meta.xml
<CustomField>
    <fullName>InstitutionInformedDetail__c</fullName>
    <description>Dopis dán na vědomí instituci - detail</description>
    <label>Institution Informed Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>