cmss/main/default/objects/Case/fields/InternalPrecaution__c.field-meta.xml
<CustomField>
    <fullName>InternalPrecaution__c</fullName>
    <description>Informace zda pro podání bylo přijato opatření</description>
    <label>Internal Precaution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>