cmss/main/default/objects/Case/fields/IsClientClaim__c.field-meta.xml
<CustomField>
    <fullName>IsClientClaim__c</fullName>
    <description>Checks whether the related record type developer name contains ClientClaim keyword flagging the case as Client Claim</description>
    <formula>CONTAINS( RecordType.DeveloperName , &apos;ClientClaim&apos;)</formula>
    <label>Is Client Claim</label>
    <type>Checkbox</type>
</CustomField>