cmss/main/default/objects/Case/fields/IsComplaint__c.field-meta.xml
<CustomField>
    <fullName>IsComplaint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informace zda se jedná o stížnost</description>
    <label>Is Complaint</label>
    <type>Checkbox</type>
</CustomField>