cmss/main/default/objects/Case/fields/IsSetRestriction__c.field-meta.xml
<CustomField>
    <fullName>IsSetRestriction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Při zaškrtnutí se nastavuje příznak Omezení zpracování</description>
    <label>Set Restriction</label>
    <type>Checkbox</type>
</CustomField>